# MedNote

./: .env.example  .gitignore  README.md  config.yml  pyproject.toml
data/transcripts/: synthetic_transcripts.json
docs/: icd10_rag_deep_dive.md  implementation_plan.md  latency_optimization_plan.md  mcp_tools_notes.md  prompt_design_notes.md  requirements.md  retrieval_process_notes.md  tasks.md  team.md  tools.md  week1_demo_summary.md  week2_demo_summary.md
docs/notebooks/: agent_graph.ipynb  bibek_rag_eplore_explained.md  icd10_rag.ipynb  mcp_tools.ipynb
scripts/: build_index.py  validate_index.py
src/mednote/: config.py
src/mednote/agent/: graph.py  nodes.py  prompts.py  schemas.py
src/mednote/mcp/: server.py
src/mednote/memory/: store.py
src/mednote/rag/: cache.py  embeddings.py  entity_extractor.py  guidelines.py  indexer.py  pipeline.py  reranker.py  retriever.py  specificity.py
src/mednote/tools/: __init__.py  ehr_api.py  ehr_client.py  get_history.py  save_note.py
src/mednote/ui/: app.py
tests/: fakes.py  old_test_prompts.py  test_agent_graph.py  test_config.py  test_ehr_api.py  test_indexer.py  test_mcp.py  test_mcp_server.py  test_memory.py  test_memory_store.py  test_prompts.py  test_rag_pipeline.py  test_rag_retrieval.py  test_tools.py  test_transcripts.py  test_ui_app.py
