[project]
name = "mednote"
version = "0.1.0"
description = "Clinical documentation agent - converts transcripts to SOAP notes"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-core",
    "anthropic>=0.100.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=5.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "fastembed>=0.3.0",
    "gradio>=5.0.0",
    "fastapi>=0.130.0",
    "uvicorn",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx",
    "python-dotenv",
    "lxml",
    "ragas>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mednote"]
